--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -11184,10 +11184,10 @@ header.masthead .post-heading .meta a {
   color: #fff;
 }
 @media (min-width: 992px) {
-  header.masthead {
-    padding-top: 12.5rem;
-    padding-bottom: 12.5rem;
-  }
+  /* header.masthead { */
+    /* padding-top: 12.5rem; */
+    /* padding-bottom: 12.5rem; */
+  /* } */
   header.masthead .page-heading h1, header.masthead .page-heading .h1,
 header.masthead .site-heading h1,
 header.masthead .site-heading .h1 {
